--- a/css/simpleGridTemplate.css
+++ b/css/simpleGridTemplate.css
@@ -2,12 +2,17 @@
 /* Body */
 body {
 	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
-	background-color: #FFFFFF;
+	background-color: #04eaff;
+/* 	background-image:url("file:///C:/Users/MY/Desktop/github%E5%8D%9A%E5%AE%A2/images/background/%E5%8A%A8%E6%BC%AB%E8%83%8C%E6%99%AF.png");
+	background-repeat: no-repeat;
+	background-position:center;
+	background-size:auto 100%;
+	background-attachment:scroll; */
 	margin: 0;
 }
 /* Container */
 .container {
-	width: 90%;
+	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
 	background-color: #FFFFFF;
@@ -16,7 +21,7 @@ body {
 header {
 	width: 100%;
 	height: 8%;
-	background-color: #5D5E5D;
+	background-color: #7ec0d0;
 	border-bottom: 1px solid #353635;
 }
 .logo {
@@ -171,7 +176,8 @@ footer {
 	width: 50%;
 }
 .gallery .thumbnail .tag {
-	color: #5D5E5D;
+	color: #858e8f;
+	
 	padding-bottom: 4px;
 	padding-top: 4px;
 	text-align: left;
