--- a/css/simpleGridTemplate.css
+++ b/css/simpleGridTemplate.css
@@ -2,7 +2,7 @@
 /* Body */
 body {
 	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
-	background-color: #04eaff;
+/* 	background-color: #04eaff; */
 	background-image:url("https://yongma16.github.io/images/background/lonely.png");
 	background-repeat: no-repeat;
 	background-position:center;
