--- a/css/simpleGridTemplate.css
+++ b/css/simpleGridTemplate.css
@@ -12,6 +12,15 @@ body {
 }
 
 /* 过渡效果 */
+.bar
+{
+	width:6px;
+	height:60px;
+	background: white;
+	display:inline-block;
+	transform-origin: bottom center;
+	animation: loading 1.5s ease-in-out infinite;
+}
 .bar1{
 	animation-delay:0.1s;
 }
